--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -9,7 +9,7 @@
 *** xref:about-rancher/architecture/rancher-server-and-components.adoc[]
 ** xref:about-rancher/concepts.adoc[]
 ** xref:about-rancher/glossary.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 * xref:installation-and-upgrade/installation-and-upgrade.adoc[Installation and Upgrades]
 ** xref:installation-and-upgrade/quick-start/quick-start.adoc[]
 *** xref:installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc[]
@@ -85,7 +85,7 @@ ifeval::["{build-type}" != "mcm"]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
 endif::[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 ** xref:rancher-admin/scc-registration.adoc[]
 endif::[]
 ** User Management
@@ -124,7 +124,7 @@ endif::[]
 **** xref:rancher-admin/users/settings/manage-node-templates.adoc[]
 **** xref:rancher-admin/users/settings/user-preferences.adoc[]
 **** xref:rancher-admin/users/settings/manage-cloud-credentials.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 ** Global Configuration
 *** xref:rancher-admin/global-configuration/custom-branding.adoc[]
 *** xref:rancher-admin/global-configuration/notification-center.adoc[]
@@ -156,7 +156,7 @@ endif::[]
 ** CLI
 *** xref:rancher-admin/cli/kubectl.adoc[]
 *** xref:rancher-admin/cli/rancher-cli.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 ** xref:rancher-admin/experimental-features/experimental-features.adoc[]
 *** xref:rancher-admin/experimental-features/continuous-delivery.adoc[]
 *** xref:rancher-admin/experimental-features/cluster-role-aggregation.adoc[]
@@ -171,13 +171,13 @@ endif::[]
 *** xref:cluster-deployment/production-checklist/roles-for-nodes-in-kubernetes.adoc[]
 *** xref:cluster-deployment/production-checklist/tips-to-set-up-containers.adoc[]
 ** xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 *** xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/aks/configuration.adoc[]
 endif::[]
 *** xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/eks/configuration.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 *** xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/configuration.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/private-clusters.adoc[]
@@ -319,7 +319,7 @@ endif::[]
 ** xref:security/secrets-hub.adoc[]
 ** xref:security/open-ports-with-firewalld.adoc[]
 ** xref:security/encrypting-http.adoc[]
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 * xref:integrations/integrations.adoc[Integrations]
 ** xref:integrations/kubernetes-distributions.adoc[]
 ** xref:integrations/rancher-extensions.adoc[]
