--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -183,6 +183,7 @@ ifeval::["{build-type}" != "srfa"]
 **** xref:cluster-deployment/hosted-kubernetes/gke/private-clusters.adoc[]
 endif::[]
 *** xref:cluster-deployment/hosted-kubernetes/sync-clusters.adoc[]
+ifeval::["{build-type}" != "srfa"]
 ** xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[]
 *** xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[]
 *** xref:cluster-deployment/set-up-cloud-providers/azure.adoc[]
@@ -192,6 +193,7 @@ endif::[]
 *** xref:cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc[]
 *** xref:cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc[]
 *** xref:cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/vsphere.adoc[]
+endif::[]
 ** xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[]
 ** xref:cluster-deployment/about-rancher-agents.adoc[]
 ** xref:cluster-deployment/enable-cluster-agent-scheduling-customization.adoc[]
