Refine Kubernetes overview for clarity
Removed mentions of certain cloud Kubernetes services in the overview.

--- a/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
@@ -9,13 +9,13 @@ Rancher is a container management platform built for organizations that deploy c
 
 == Run Kubernetes Everywhere
 
-Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services, such as GKE, AKS, and EKS. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
+Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
 
 == Meet IT Requirements
 
 Rancher supports centralized authentication, access control, and monitoring for all Kubernetes clusters under its control. For example, you can:
 
-* Use your Active Directory credentials to access Kubernetes clusters hosted by cloud vendors, such as GKE.
+* Use your Active Directory credentials to access Kubernetes clusters hosted by cloud vendors.
 * Setup and enforce access control and security policies across all users, groups, projects, clusters, and clouds.
 * View the health and capacity of your Kubernetes clusters from a single-pane-of-glass.
 
