--- a/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/overview.adoc
@@ -9,7 +9,7 @@ Rancher is a container management platform built for organizations that deploy c
 
 == Run Kubernetes Everywhere
 
-Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
+Kubernetes has become the container orchestration standard. Most cloud and virtualization vendors now offer it as standard infrastructure. Rancher users have the choice of creating Kubernetes clusters with Rancher Kubernetes Engine (RKE) or cloud Kubernetes services, such as EKS. Rancher users can also import and manage their existing Kubernetes clusters created using any Kubernetes distribution or installer.
 
 == Meet IT Requirements
 
