Remove mentions of cloud Kubernetes services from Architecture
Removed mentions of cloud Kubernetes services such as AKS, GCE etc. in the Architecture.

--- a/versions/v2.12/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
@@ -39,7 +39,7 @@ There is one cluster controller and one cluster agent for each downstream cluste
 * Watches for resource changes in the downstream cluster
 * Brings the current state of the downstream cluster to the desired state
 * Configures access control policies to clusters and projects
-* Provisions clusters by calling the required Docker machine drivers and Kubernetes engines, such as GKE
+* Provisions clusters by calling the required Docker machine drivers and Kubernetes engines
 
 By default, to enable Rancher to communicate with a downstream cluster, the cluster controller connects to the cluster agent. If the cluster agent is not available, the cluster controller can connect to a <<_3_node_agents,node agent>> instead.
 
@@ -188,7 +188,7 @@ The tools that Rancher uses to provision downstream user clusters depends on the
 
 === Rancher Launched Kubernetes for Nodes Hosted in an Infrastructure Provider
 
-Rancher can dynamically provision nodes in a provider such as Amazon EC2, DigitalOcean, Azure, or vSphere, then install Kubernetes on them.
+Rancher can dynamically provision nodes in Amazon EC2, and then install Kubernetes on them.
 
 Rancher provisions this type of cluster using https://github.com/rancher/machine[docker-machine.]
 
@@ -200,7 +200,7 @@ Rancher provisions this type of cluster using https://github.com/rancher/rke2[RK
 
 === Hosted Kubernetes Providers
 
-When setting up this type of cluster, Kubernetes is installed by providers such as Google Kubernetes Engine, Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.
+When setting up this type of cluster, Kubernetes is installed by Amazon Elastic Container Service for Kubernetes.
 
 Rancher provisions this type of cluster using https://github.com/rancher/kontainer-engine[kontainer-engine.]
 
