Remove mentions of cloud Kubernetes services from Cluster Deployment
Removed references to GKE and AKS in the cluster deployment documentation, streamlining the focus on EKS and RKE.

--- a/versions/v2.12/modules/en/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/cluster-deployment.adoc
@@ -20,9 +20,9 @@ include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
 
 == Setting up Clusters in a Hosted Kubernetes Provider
 
-In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.
+In this scenario, Rancher does not provision Kubernetes because it is installed by Amazon Elastic Container Service for Kubernetes.
 
-If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
+If you use a Kubernetes provider, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
 
 For more information, refer to the section on xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters.]
 
@@ -40,7 +40,7 @@ For more information, refer to the section on xref:cluster-deployment/launch-kub
 
 === Launching Kubernetes and Provisioning Nodes in an Infrastructure Provider
 
-Rancher can dynamically provision nodes in infrastructure providers such as Amazon EC2, DigitalOcean, Azure, or vSphere, then install Kubernetes on them.
+Rancher can dynamically provision nodes in infrastructure providers such as Amazon EC2, then install Kubernetes on them.
 
 Using Rancher, you can create pools of nodes based on a xref:./infra-providers/infra-providers.adoc#_node_templates[node template]. This template defines the parameters used to launch nodes in your cloud providers.
 
@@ -72,4 +72,4 @@ For more information, see xref:cluster-deployment/register-existing-clusters.ado
 
 The most common way to programmatically deploy Kubernetes clusters through Rancher is by using the Rancher2 Terraform provider. The documentation for creating clusters with Terraform is https://registry.terraform.io/providers/rancher/rancher2/latest/docs/resources/cluster[here.]
 
-EKS, GKE, AKS clusters and RKE clusters can be created or imported with Terraform.
+EKS and RKE clusters can be created or imported with Terraform.
