--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -6,7 +6,7 @@ endif::[]
 :page-revdate: {revdate}
 
 ifeval::["{build-type}" != "mcm"]
-Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in AKS, EKS or GKE. This enables sources other than Rancher to own a hosted cluster's state.
+Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in EKS. This enables sources other than Rancher to own a hosted cluster's state.
 endif::[]
 ifeval::["{build-type}" == "mcm"]
 Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in EKS. This enables sources other than Rancher to own a hosted cluster's state.
@@ -23,25 +23,19 @@ There are two fields on the Rancher Cluster object that must be understood to un
 
 . The config object for the cluster, located on the Spec of the Cluster:
 ifeval::["{build-type}" != "mcm"]
- ** For AKS, the field is called AKSConfig
- ** For EKS, the field is called EKSConfig
- ** For GKE, the field is called GKEConfig
-. The UpstreamSpec object
- ** For AKS, this is located on the AKSStatus field on the Status of the Cluster.
+ ** For EKS, the field is called EKSConfig.
+. The UpstreamSpec object:
  ** For EKS, this is located on the EKSStatus field on the Status of the Cluster.
- ** For GKE, this is located on the GKEStatus field on the Status of the Cluster.
-
+ 
 The struct types that define these objects can be found in their corresponding operator projects:
 
-* https://github.com/rancher/aks-operator/blob/master/pkg/apis/aks.cattle.io/v1/types.go[aks-operator]
 * https://github.com/rancher/eks-operator/blob/master/pkg/apis/eks.cattle.io/v1/types.go[eks-operator]
-* https://github.com/rancher/gke-operator/blob/master/pkg/apis/gke.cattle.io/v1/types.go[gke-operator]
 
 All fields  are nillable, except for the following: the cluster name, the location (region or zone), Imported, and the cloud credential reference.
 
-The AKSConfig, EKSConfig or GKEConfig represents the desired state. Nil values are ignored. Fields that are non-nil in the config object can be thought of as managed. When a cluster is created in Rancher, all fields are non-nil and therefore managed. When a pre-existing cluster is registered in Rancher all nillable fields are set to nil and aren't managed. Those fields become managed once their value has been changed by Rancher.
+The EKSConfig represents the desired state. Nil values are ignored. Fields that are non-nil in the config object can be thought of as managed. When a cluster is created in Rancher, all fields are non-nil and therefore managed. When a pre-existing cluster is registered in Rancher all nillable fields are set to nil and aren't managed. Those fields become managed once their value has been changed by Rancher.
 
-UpstreamSpec represents the cluster as it is in the hosted Kubernetes provider. It's refreshed every 5 minutes. After the UpstreamSpec is refreshed, Rancher checks if the cluster has an update in progress. If it's currently updating, nothing further is done. If it is not currently updating, any managed fields on AKSConfig, EKSConfig or GKEConfig are overwritten with their corresponding value from the recently updated UpstreamSpec.
+UpstreamSpec represents the cluster as it is in the hosted Kubernetes provider. It's refreshed every 5 minutes. After the UpstreamSpec is refreshed, Rancher checks if the cluster has an update in progress. If it's currently updating, nothing further is done. If it is not currently updating, any managed fields on EKSConfig are overwritten with their corresponding value from the recently updated UpstreamSpec.
 
 [CAUTION]
 ====
@@ -49,7 +43,7 @@ When you import a cluster from a cloud provider into Rancher, UpstreamSpec repre
 ====
 
 
-The effective desired state can be thought of as the UpstreamSpec, plus all non-nil fields in the AKSConfig, EKSConfig or GKEConfig. This is what is displayed in the UI.
+The effective desired state can be thought of as the UpstreamSpec, plus all non-nil fields in the EKSConfig. This is what is displayed in the UI.
 endif::[]
 ifeval::["{build-type}" == "mcm"]
  ** For EKS, the field is called EKSConfig
