Remove Azure and DO from Rancher configuration options
Removed Azure and DO from Rancher configuration options.

--- a/versions/v2.12/modules/en/pages/cluster-deployment/configuration/rke2.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/configuration/rke2.adoc
@@ -44,10 +44,8 @@ To edit your cluster in YAML:
 
 === Machine Pool Configuration
 
-This subsection covers generic machine pool configurations. For specific infrastructure provider configurations, refer to the following:
+This subsection covers generic machine pool configurations. For specific EC2 infrastructure provider configurations, refer to the following:
 
-* xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[Azure]
-* xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[DigitalOcean]
 * xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[EC2]
 
 [discrete]
