Remove AKS and GKE mentions from Rancher configuration options
Updated documentation for registering existing clusters, focusing on EKS and removing references to GKE and AKS.

--- a/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
@@ -28,17 +28,11 @@ kubectl create clusterrolebinding cluster-admin-binding \
   --user [USER_ACCOUNT]
 ----
 
-Since, by default, Google Kubernetes Engine (GKE) doesn't grant the `cluster-admin` role, you must run these commands on GKE clusters before you can register them. To learn more about role-based access control for GKE, please see https://cloud.google.com/kubernetes-engine/docs/how-to/role-based-access-control[the official Google documentation].
+=== Elastic Kubernetes Service (EKS)
 
-=== Elastic Kubernetes Service (EKS), Azure Kubernetes Service (AKS), and Google Kubernetes Engine (GKE)
-
-To successfully import or provision EKS, AKS, and GKE clusters from Rancher, the cluster must have at least one managed node group.
-
-AKS clusters can be imported only if local accounts are enabled. If a cluster is configured to use Microsoft Entra ID for authentication, then Rancher will not be able to import it and report an error.
+To successfully import or provision EKS clusters from Rancher, the cluster must have at least one managed node group.
 
 EKS Anywhere clusters can be imported/registered into Rancher with an API address and credentials, as with any downstream cluster. EKS Anywhere clusters are treated as imported clusters and do not have full lifecycle support from Rancher.
-
-GKE Autopilot clusters aren't supported. See https://cloud.google.com/kubernetes-engine/docs/resources/autopilot-standard-feature-comparison[Compare GKE Autopilot and Standard] for more information about the differences between GKE modes.
 
 == Registering a Cluster
 
@@ -76,9 +70,9 @@ You can not re-register a cluster that is currently active in a Rancher setup.
 ====
 
 
-=== Configuring an Imported EKS, AKS or GKE Cluster with Terraform
+=== Configuring an Imported EKS Cluster with Terraform
 
-You should define *only* the minimum fields that Rancher requires when importing an EKS, AKS or GKE cluster with Terraform. This is important as Rancher will overwrite what was in the cluster configuration with any config that the user has provided.
+You should define *only* the minimum fields that Rancher requires when importing an EKS cluster with Terraform. This is important as Rancher will overwrite what was in the cluster configuration with any config that the user has provided.
 
 [CAUTION]
 ====
@@ -117,7 +111,7 @@ The control that Rancher has to manage a registered cluster depends on the type 
 
 * <<_features_for_all_registered_clusters,Features for All Registered Clusters>>
 * <<_additional_features_for_registered_rke2_and_k3s_clusters,Additional Features for Registered RKE2 and K3s Clusters>>
-* <<_additional_features_for_registered_eks_aks_and_gke_clusters,Additional Features for Registered EKS, AKS and GKE Clusters>>
+* <<_additional_features_for_registered_eks_clusters,Additional Features for Registered EKS Clusters>>
 
 === Features for All Registered Clusters
 
@@ -137,18 +131,18 @@ https://documentation.suse.com/cloudnative/k3s/latest/en/introduction.html[K3s] 
 https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2] is Rancher's next-generation Kubernetes distribution for datacenter and cloud installations.
 
 When an RKE2 or K3s cluster is registered in Rancher, Rancher will recognize it.
-The Rancher UI will expose features available to <<_features_for_all_registered_clusters,all registered clusters,>>, along with the following options for editing and upgrading the cluster:
+The Rancher UI will expose features available to <<_features_for_all_registered_clusters,all registered clusters>>, along with the following options for editing and upgrading the cluster:
 
 * Enable or disable <<_configuring_version_management_for_suse_rancher_prime_rke2_and_suse_rancher_prime_k3s_clusters,version management>>
 * xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[Upgrade the Kubernetes version] when version management is enabled
 * Configure the <<_configuring_suse_rancher_prime_rke2_and_suse_rancher_prime_k3s_cluster_upgrades,upgrade strategy>> when version management is enabled
 * View a read-only version of the cluster’s configuration arguments and environment variables used to launch each node
 
-=== Additional Features for Registered EKS, AKS, and GKE Clusters
+=== Additional Features for Registered EKS Clusters
 
-Rancher handles registered EKS, AKS, or GKE clusters similarly to clusters created in Rancher. However, Rancher doesn't destroy registered clusters when you delete them through the Rancher UI.
+Rancher handles registered EKS clusters similarly to clusters created in Rancher. However, Rancher doesn't destroy registered clusters when you delete them through the Rancher UI.
 
-When you create an EKS, AKS, or GKE cluster in Rancher, then delete it, Rancher destroys the cluster. When you delete a registered cluster through Rancher, the Rancher server _disconnects_ from the cluster. The cluster remains live, although it's no longer in Rancher. You can still access the deregistered cluster in the same way you did before you registered it.
+When you create an EKS cluster in Rancher and then delete it, Rancher destroys the cluster. When you delete a registered cluster through Rancher, the Rancher server _disconnects_ from the cluster. The cluster remains live, although it's no longer in Rancher. You can still access the deregistered cluster in the same way you did before you registered it.
 
 See xref:cluster-deployment/cluster-deployment.adoc[Cluster Management Capabilities by Cluster Type] for more information about what features are available for managing registered clusters.
 
@@ -322,23 +316,3 @@ To annotate a registered cluster,
 . Click *Save*.
 
 *Result:* The annotation does not give the capabilities to the cluster, but it does indicate to Rancher that the cluster has those capabilities.
-
-== Troubleshooting
-
-This section lists some of the most common errors that may occur when importing a cluster and provides steps to troubleshoot them.
-
-=== AKS
-
-The following error may occur if local accounts are disabled in your cluster:
-
-[,shell]
-----
-Error: Getting static credential is not allowed because this cluster is set to disable local accounts. 
-----
-
-To resolve this issue, enable local accounts before attempting to xref:#_registering_a_cluster[import the cluster] again:
-
-[,shell]
-----
-az aks update --resource-group <resource-group> --name <cluster-name> --enable-local-accounts
-----
