--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
@@ -30,7 +30,7 @@ To set up storage, follow these steps:
 
 Creating a persistent volume in Rancher will not create a storage volume. It only creates a Kubernetes resource that maps to an existing volume. Therefore, before you can create a persistent volume as a Kubernetes resource, you must have storage provisioned.
 
-The steps to set up a persistent storage device will differ based on your infrastructure. We provide examples of how to set up storage using xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[vSphere,] xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS,] or Amazon's xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[EBS.]
+The steps to set up a persistent storage device will differ based on your infrastructure. We provide examples of how to set up storage using xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS,] or Amazon's xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[EBS.]
 
 If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see xref:integrations/longhorn/longhorn.adoc[Cloud Native Storage with Longhorn].
 
