Remove GKE mention from ClusterProvider description
Removed GKE mention from ClusterProvider description.

--- a/versions/v2.12/modules/en/pages/security/compliance-scans/configuration-reference.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/configuration-reference.adoc
@@ -90,7 +90,7 @@ If the default BenchmarkVersions are edited, the next chart update will reset th
 
 A ClusterScanBenchmark consists of the fields:
 
-* `ClusterProvider`: This is the cluster provider name for which this benchmark is applicable. For example: RKE2, EKS, GKE, etc. Leave it empty if this benchmark can be run on any cluster type.
+* `ClusterProvider`: This is the cluster provider name for which this benchmark is applicable. For example: RKE2, EKS, etc. Leave it empty if this benchmark can be run on any cluster type.
 * `MinKubernetesVersion`: Specifies the cluster's minimum kubernetes version necessary to run this benchmark. Leave it empty if there is no dependency on a particular Kubernetes version.
 * `MaxKubernetesVersion`: Specifies the cluster's maximum Kubernetes version necessary to run this benchmark. Leave it empty if there is no dependency on a particular k8s version.
 
