--- a/versions/v2.12/modules/en/pages/faq/rancher-is-no-longer-needed.adoc
+++ b/versions/v2.12/modules/en/pages/faq/rancher-is-no-longer-needed.adoc
@@ -16,7 +16,7 @@ If Rancher is ever deleted or unrecoverable, all workloads in the downstream Kub
 The capability to access a downstream cluster without Rancher depends on the type of cluster and the way that the cluster was created. To summarize:
 
 * *Registered/Imported clusters:* The cluster will be unaffected and you can access the cluster using the same methods that you did before the cluster was registered into Rancher.
-* *Hosted Kubernetes clusters:* If you created the cluster in a cloud-hosted Kubernetes provider such as EKS, GKE, or AKS, you can continue to manage the cluster using your provider's cloud credentials.
+* *Hosted Kubernetes clusters:* If you created the cluster in a cloud-hosted Kubernetes provider such as EKS, you can continue to manage the cluster using your provider's cloud credentials.
 * *Rancher provisioned clusters:* To access an xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE2/K3s cluster,] the cluster must have the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint] enabled, and you must have already downloaded the cluster's kubeconfig file from the Rancher UI. (The authorized cluster endpoint is enabled by default for RKE clusters.) With this endpoint, you can access your cluster with kubectl directly instead of communicating through the Rancher server's xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_1_the_authentication_proxy[authentication proxy.] For instructions on how to configure kubectl to use the authorized cluster endpoint, refer to the section about directly accessing clusters with xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_authenticating_directly_with_a_downstream_cluster[kubectl and the kubeconfig file.] These clusters will use a snapshot of the authentication as it was configured when Rancher was removed.
 
 == What if I don't want Rancher anymore?
