--- a/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -18,6 +18,11 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
+| v2.11.8
+| v0.7.8
+| &check;
+| N/A
+
 | v2.11.7
 | v0.7.7
 | &check;
