[2.11.8] Add deprecated feature table entry

--- a/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
@@ -14,6 +14,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+| https://github.com/rancher/rancher/releases/tag/v2.11.8[2.11.8]
+| November 24, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.11.7[2.11.7]
 | October 23, 2025
 
