--- a/versions/v2.12/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.12/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -18,6 +18,11 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
+| v2.12.4
+| v0.8.4
+| &check;
+| &check;
+
 | v2.12.3
 | v0.8.3
 | &check;
