[2.12.4] Add deprecated features table entry

--- a/versions/v2.12/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.12/modules/en/pages/faq/deprecated-features.adoc
@@ -14,6 +14,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+| https://github.com/rancher/rancher/releases/tag/v2.12.4[2.12.4]
+| Nov 24, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.12.3[2.12.3]
 | Oct 23, 2025
 
