--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -5,7 +5,12 @@ endif::[]
 :revdate: 2025-10-01
 :page-revdate: {revdate}
 
+ifeval::["{build-type}" != "srfa"] 
+Rancher can run a security scan to check whether a cluster is deployed according to security best practices as defined in Kubernetes security benchmarks, such as the ones provided by STIG, BSI or CIS. The Compliance scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS, AKS, and GKE.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 Rancher can run a security scan to check whether a cluster is deployed according to security best practices as defined in Kubernetes security benchmarks, such as the ones provided by STIG, BSI or CIS. The Compliance scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS.
+endif::[]
 
 The `rancher-compliance` app leverages https://github.com/aquasecurity/kube-bench[kube-bench,] an open-source tool from Aqua Security, to check the compliance of clusters against Kubernetes Benchmarks. Also, to generate a cluster-wide report, the application utilizes https://github.com/vmware-tanzu/sonobuoy[Sonobuoy] for report aggregation.
 
