Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -108,7 +108,12 @@ There are two types of RKE2/K3s cluster scan profiles:
 * *Permissive:* This profile has a set of tests that have been will be skipped as these tests will fail on a default RKE2/K3s Kubernetes cluster. Besides the list of skipped tests, the profile will also not run the not applicable tests.
 * *Hardened:* This profile will not skip any tests, except for the non-applicable tests.
 
+ifeval::["{build-type}" != "srfa"]
+The EKS and GKE cluster scan profiles are based on CIS Benchmark versions that are specific to those types of clusters.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 The EKS cluster scan profiles are based on CIS Benchmark versions that are specific to those types of clusters.
+endif::[]
 
 In order to pass the "Hardened" profile, you will need to follow the steps on the xref:security/security-overview.adoc#_rancher_hardening_guide[hardening guide] and use the `cluster.yml` defined in the hardening guide to provision a hardened cluster.
 
