Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -122,8 +122,14 @@ The default profile and the supported CIS benchmark version depends on the type 
 The `rancher-compliance` supports the CIS 1.9 Benchmark version.
 
 * For RKE2 Kubernetes clusters, the RKE2 Permissive 1.9 profile is the default.
+ifeval::["{build-type}" != "srfa"]
+* EKS and GKE have their own CIS Benchmarks published by `kube-bench`. The corresponding test profiles are used by default for those clusters.
+* For cluster types other than RKE2, EKS and GKE, the Generic CIS 1.5 profile will be used by default.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 * EKS has its own CIS Benchmarks published by `kube-bench`. The corresponding test profiles are used by default for those clusters.
 * For cluster types other than RKE2 and EKS, the Generic CIS 1.5 profile will be used by default.
+endif::[]
 
 == About Skipped and Not Applicable Tests
 
