Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -97,7 +97,14 @@ The following profiles are available:
 * K3s hardened 1.20
 * K3s permissive 1.23
 * K3s hardened 1.23
+ifeval::["{build-type}" != "srfa"]
+* AKS
 * EKS
+* GKE
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+* EKS
+endif::[]
 
 You also have the ability to customize a profile by saving a set of tests to skip.
 
