Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/observability/logging/logging-helm-chart-options.adoc
+++ b/versions/v2.12/modules/en/pages/observability/logging/logging-helm-chart-options.adoc
@@ -70,10 +70,24 @@ The following table summarizes the sources where additional logs may be collecte
 | ✓
 |
 
+ifeval::["{build-type}" != "srfa"]
+| AKS
+| ✓
+|
+
 | EKS
 | ✓
 |
 
+| GKE
+| ✓
+|
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+| EKS
+| ✓
+|
+endif::[]
 |===
 
 To enable hosted Kubernetes providers as additional logging sources, enable *Enable enhanced cloud provider logging* option when installing or upgrading the Logging Helm chart.
