Apply suggestions from code review

--- a/versions/v2.12/modules/en/pages/cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc
@@ -31,9 +31,26 @@ Support for layer-4 load balancer varies based on the underlying cloud provider.
 | Amazon EKS
 | Supported by AWS cloud provider
 
+ifeval::["{build-type}" != "srfa"]
+| Google GKE
+| Supported by GCE cloud provider
+
+| Azure AKS
+| Supported by Azure cloud provider
+
 | RKE on EC2
 | Supported by AWS cloud provider
 
+| RKE on DigitalOcean
+| Limited NGINX or third-party Ingress*
+
+| RKE on vSphere
+| Limited NGINX or third party-Ingress*
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+| RKE on EC2
+| Supported by AWS cloud provider
+endif::[]
 | RKE on Custom Hosts +
 (e.g. bare-metal servers)
 | Limited NGINX or third-party Ingress*
@@ -58,9 +75,26 @@ Support for layer-7 load balancer varies based on the underlying cloud provider.
 | Amazon EKS
 | Supported by AWS cloud provider
 
+ifeval::["{build-type}" != "srfa"]
+| Google GKE
+| Supported by GKE cloud provider
+
+| Azure AKS
+| Not Supported
+
 | RKE on EC2
 | Nginx Ingress Controller
 
+| RKE on DigitalOcean
+| Nginx Ingress Controller
+
+| RKE on vSphere
+| Nginx Ingress Controller
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+| RKE on EC2
+| Nginx Ingress Controller
+endif::[]
 | RKE on Custom Hosts +
 (e.g. bare-metal servers)
 | Nginx Ingress Controller
