--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/examples/examples.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/examples/examples.adoc
@@ -9,5 +9,11 @@ Rancher supports persistent storage with a variety of volume plugins. However, b
 
 For your convenience, Rancher offers documentation on how to configure some of the popular storage methods:
 
+ifeval::["{build-type}" != "srfa"]
 * xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS]
+* xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[vSphere]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+* xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS]
+endif::[]
 * xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[EBS]
