Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
@@ -33,7 +33,26 @@ The following storage provisioners are enabled by default:
 
 | Amazon EBS Disk
 | `aws-ebs`
+ifeval::["{build-type}" != "srfa"]
+| Amazon EBS Disk
+| `aws-ebs`
 
+| AzureFile
+| `azure-file`
+
+| AzureDisk
+| `azure-disk`
+
+| Google Persistent Disk
+| `gce-pd`
+
+| VMware vSphere Volume
+| `vsphere-volume`
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+| Amazon EBS Disk
+| `aws-ebs`
+endif::[]
 | Local
 | `local`
 
