--- a/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
@@ -28,6 +28,17 @@ kubectl create clusterrolebinding cluster-admin-binding \
   --user [USER_ACCOUNT]
 ----
 
+ifeval::["{build-type}" != "srfa"]
+Since, by default, Google Kubernetes Engine (GKE) doesn't grant the `cluster-admin` role, you must run these commands on GKE clusters before you can register them. To learn more about role-based access control for GKE, please see https://cloud.google.com/kubernetes-engine/docs/how-to/role-based-access-control[the official Google documentation].
+2:03
+=== Elastic Kubernetes Service (EKS), Azure Kubernetes Service (AKS), and Google Kubernetes Engine (GKE)
+To successfully import or provision EKS, AKS, and GKE clusters from Rancher, the cluster must have at least one managed node group.
+AKS clusters can be imported only if local accounts are enabled. If a cluster is configured to use Microsoft Entra ID for authentication, then Rancher will not be able to import it and report an error.
+EKS Anywhere clusters can be imported/registered into Rancher with an API address and credentials, as with any downstream cluster. EKS Anywhere clusters are treated as imported clusters and do not have full lifecycle support from Rancher.
+GKE Autopilot clusters aren't supported. See https://cloud.google.com/kubernetes-engine/docs/resources/autopilot-standard-feature-comparison[Compare GKE Autopilot and Standard] for more information about the differences between GKE modes.
+== Registering a Cluster
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 === Elastic Kubernetes Service (EKS)
 
 To successfully import or provision EKS clusters from Rancher, the cluster must have at least one managed node group.
@@ -35,7 +46,7 @@ To successfully import or provision EKS clusters from Rancher, the cluster must 
 EKS Anywhere clusters can be imported/registered into Rancher with an API address and credentials, as with any downstream cluster. EKS Anywhere clusters are treated as imported clusters and do not have full lifecycle support from Rancher.
 
 == Registering a Cluster
-
+endif::[]
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, *Import Existing*.
 . Choose the type of cluster.
