Apply suggestions from code review

--- a/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
@@ -80,9 +80,19 @@ You can not re-register a cluster that is currently active in a Rancher setup.
 ====
 
 
+ifeval::["{build-type}" != "srfa"]
+=== Configuring an Imported EKS, AKS or GKE Cluster with Terraform
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 === Configuring an Imported EKS Cluster with Terraform
+endif::[]
 
+ifeval::["{build-type}" != "srfa"]
+You should define *only* the minimum fields that Rancher requires when importing an EKS, AKS or GKE cluster with Terraform. This is important as Rancher will overwrite what was in the cluster configuration with any config that the user has provided.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 You should define *only* the minimum fields that Rancher requires when importing an EKS cluster with Terraform. This is important as Rancher will overwrite what was in the cluster configuration with any config that the user has provided.
+endif::[]
 
 [CAUTION]
 ====
@@ -121,7 +131,12 @@ The control that Rancher has to manage a registered cluster depends on the type 
 
 * <<_features_for_all_registered_clusters,Features for All Registered Clusters>>
 * <<_additional_features_for_registered_rke2_and_k3s_clusters,Additional Features for Registered RKE2 and K3s Clusters>>
+ifeval::["{build-type}" != "srfa"]
+* <<_additional_features_for_registered_eks_aks_and_gke_clusters,Additional Features for Registered EKS, AKS and GKE Clusters>>
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 * <<_additional_features_for_registered_eks_clusters,Additional Features for Registered EKS Clusters>>
+endif::[]
 
 === Features for All Registered Clusters
 
@@ -148,11 +163,26 @@ The Rancher UI will expose features available to <<_features_for_all_registered_
 * Configure the <<_configuring_suse_rancher_prime_rke2_and_suse_rancher_prime_k3s_cluster_upgrades,upgrade strategy>> when version management is enabled
 * View a read-only version of the cluster’s configuration arguments and environment variables used to launch each node
 
+ifeval::["{build-type}" != "srfa"]
+=== Additional Features for Registered EKS, AKS, and GKE Clusters
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 === Additional Features for Registered EKS Clusters
+endif::[]
 
+ifeval::["{build-type}" != "srfa"]
+Rancher handles registered EKS, AKS, or GKE clusters similarly to clusters created in Rancher. However, Rancher doesn't destroy registered clusters when you delete them through the Rancher UI.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 Rancher handles registered EKS clusters similarly to clusters created in Rancher. However, Rancher doesn't destroy registered clusters when you delete them through the Rancher UI.
+endif::[]
 
+ifeval::["{build-type}" != "srfa"]
+When you create an EKS, AKS, or GKE cluster in Rancher, then delete it, Rancher destroys the cluster. When you delete a registered cluster through Rancher, the Rancher server _disconnects_ from the cluster. The cluster remains live, although it's no longer in Rancher. You can still access the deregistered cluster in the same way you did before you registered it.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 When you create an EKS cluster in Rancher and then delete it, Rancher destroys the cluster. When you delete a registered cluster through Rancher, the Rancher server _disconnects_ from the cluster. The cluster remains live, although it's no longer in Rancher. You can still access the deregistered cluster in the same way you did before you registered it.
+endif::[]
 
 See xref:cluster-deployment/cluster-deployment.adoc[Cluster Management Capabilities by Cluster Type] for more information about what features are available for managing registered clusters.
 
@@ -325,4 +355,29 @@ To annotate a registered cluster,
 . Add an annotation to the cluster with the format `capabilities/<capability>: <value>` where `value` is the cluster capability that will be overridden by the annotation. In this scenario, Rancher is not aware of any capabilities of the cluster until you add the annotation.
 . Click *Save*.
 
+ifeval::["{build-type}" != "srfa"]
 *Result:* The annotation does not give the capabilities to the cluster, but it does indicate to Rancher that the cluster has those capabilities.
+
+== Troubleshooting
+
+This section lists some of the most common errors that may occur when importing a cluster and provides steps to troubleshoot them.
+
+=== AKS
+
+The following error may occur if local accounts are disabled in your cluster:
+
+[,shell]
+----
+Error: Getting static credential is not allowed because this cluster is set to disable local accounts. 
+----
+
+To resolve this issue, enable local accounts before attempting to xref:#_registering_a_cluster[import the cluster] again:
+
+[,shell]
+----
+az aks update --resource-group <resource-group> --name <cluster-name> --enable-local-accounts
+----
+endif::[]
+ifeval::["{build-type}" == "srfa"]
+*Result:* The annotation does not give the capabilities to the cluster, but it does indicate to Rancher that the cluster has those capabilities.
+endif::[]
