Apply suggestion from @dariavladykina

--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
@@ -7,7 +7,12 @@ endif::[]
 
 In this scenario, Rancher does not provision Kubernetes because it is installed by Amazon Elastic Container Service for Kubernetes.
 
+ifeval::["{build-type}" != "srfa"]
+If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 If you use a Kubernetes provider, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
+endif::[]
 
 In this use case, Rancher sends a request to a hosted provider using the provider's API. The provider then provisions and hosts the cluster for you. When the cluster finishes building, you can manage it from the Rancher UI along with clusters you've provisioned that are hosted on-prem or in an infrastructure provider.
 
