--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
@@ -5,7 +5,12 @@ endif::[]
 :revdate: 2025-08-05
 :page-revdate: {revdate}
 
+ifeval::["{build-type}" != "srfa"]
+In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 In this scenario, Rancher does not provision Kubernetes because it is installed by Amazon Elastic Container Service for Kubernetes.
+endif::[]
 
 ifeval::["{build-type}" != "srfa"]
 If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
