--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
@@ -19,6 +19,24 @@ ifeval::["{build-type}" == "srfa"]
 If you use a Kubernetes provider, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
 endif::[]
 
+ifeval::["{build-type}" != "srfa"]
+In this use case, Rancher sends a request to a hosted provider using the provider's API. The provider then provisions and hosts the cluster for you. When the cluster finishes building, you can manage it from the Rancher UI along with clusters you've provisioned that are hosted on-prem or in an infrastructure provider.
+
+Rancher supports the following Kubernetes providers:
+
+* https://cloud.google.com/kubernetes-engine/[Google GKE (Google Kubernetes Engine)]
+* https://aws.amazon.com/eks/[Amazon EKS (Amazon Elastic Container Service for Kubernetes)]
+* https://azure.microsoft.com/en-us/services/kubernetes-service/[Microsoft AKS (Azure Kubernetes Service)]
+
+== Hosted Kubernetes Provider Authentication
+
+When using Rancher to create a cluster hosted by a provider, you are prompted for authentication information. This information is required to access the provider's API. For more information on how to obtain this information, see the following procedures:
+
+* xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[Creating a GKE Cluster]
+* xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[Creating an EKS Cluster]
+* xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[Creating an AKS Cluster]
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 In this use case, Rancher sends a request to a hosted provider using the provider's API. The provider then provisions and hosts the cluster for you. When the cluster finishes building, you can manage it from the Rancher UI along with clusters you've provisioned that are hosted on-prem or in an infrastructure provider.
 
 Rancher supports the Amazon EKS provider:
@@ -30,3 +48,4 @@ Rancher supports the Amazon EKS provider:
 When using Rancher to create a cluster hosted by a provider, you are prompted for authentication information. This information is required to access the provider's API. For more information on how to obtain this information, see the following procedures
 
 * xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[Creating an EKS Cluster]
+endif::[]
