--- a/versions/v2.12/modules/en/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/cluster-deployment.adoc
@@ -20,9 +20,19 @@ include::shared:ROOT:partial$en/cluster-capabilities-updated-table.adoc[]
 
 == Setting up Clusters in a Hosted Kubernetes Provider
 
+ifeval::["{build-type}" != "srfa"]
+In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 In this scenario, Rancher does not provision Kubernetes because it is installed by Amazon Elastic Container Service for Kubernetes.
+endif::[]
 
+ifeval::["{build-type}" != "srfa"]
+If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 If you use a Kubernetes provider, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.
+endif::[]
 
 For more information, refer to the section on xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters.]
 
@@ -40,7 +50,12 @@ For more information, refer to the section on xref:cluster-deployment/launch-kub
 
 === Launching Kubernetes and Provisioning Nodes in an Infrastructure Provider
 
+ifeval::["{build-type}" != "srfa"]
+Rancher can dynamically provision nodes in infrastructure providers such as Amazon EC2, DigitalOcean, Azure, or vSphere, then install Kubernetes on them.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 Rancher can dynamically provision nodes in infrastructure providers such as Amazon EC2, then install Kubernetes on them.
+endif::[]
 
 Using Rancher, you can create pools of nodes based on a xref:./infra-providers/infra-providers.adoc#_node_templates[node template]. This template defines the parameters used to launch nodes in your cloud providers.
 
@@ -72,4 +87,9 @@ For more information, see xref:cluster-deployment/register-existing-clusters.ado
 
 The most common way to programmatically deploy Kubernetes clusters through Rancher is by using the Rancher2 Terraform provider. The documentation for creating clusters with Terraform is https://registry.terraform.io/providers/rancher/rancher2/latest/docs/resources/cluster[here.]
 
+ifeval::["{build-type}" != "srfa"]
+EKS, GKE, AKS clusters and RKE clusters can be created or imported with Terraform.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 EKS and RKE clusters can be created or imported with Terraform.
+endif::[]
