--- a/shared/modules/ROOT/partials/en/glossary.adoc
+++ b/shared/modules/ROOT/partials/en/glossary.adoc
@@ -54,7 +54,12 @@ Extension catalogs::
 
 == H
 
+ifeval::["{build-type}" != "srfa"]
+Hosted cluster:: A managed cluster that is hosted in the cloud, by a Kubernetes provider. Rancher supports a variety of hosted Kubernetes providers, including Amazon Elastic Kubernetes Service (EKS), Azure Kubernetes Service (AKS), and Google Kubernetes Engine (GKE). Rancher integrates with the hosted Kubernetes provider's cloud APIs, so that you can manage the cluster from the Rancher UI.
+endif::[]
+ifeval::["{build-type}" == "srfa"]
 Hosted cluster:: A managed cluster that is hosted in the cloud, by a Kubernetes provider. Rancher supports Amazon Elastic Kubernetes Service (EKS) and integrates with the hosted Kubernetes provider's cloud APIs, so that you can manage the cluster from the Rancher UI.
+endif::[]
 +
 *Related terms:* _Downstream cluster, Imported cluster, Managed cluster, Registered cluster_
 
