Fix community version availability
Co-authored-by: Lucas Saintarbor <lucas.saintarbor@suse.com>

--- a/versions/v2.12/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.12/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -21,7 +21,7 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 | v2.12.4
 | v0.8.4
 | &check;
-| &check;
+| &cross;
 
 | v2.12.3
 | v0.8.3
