--- a/versions/v2.12/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.12/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -21,7 +21,7 @@ Rancher 将 Rancher-Webhook 作为单独的 deployment 和服务部署在 local 
 | v2.12.4
 | v0.8.4
 | &check;
-| &check;
+| &cross;
 
 | v2.12.3
 | v0.8.3
