Apply suggestion from @pmkovar
Co-authored-by: Petr Kovar <pknbe@volny.cz>

--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -5,7 +5,7 @@ endif::[]
 :revdate: 2025-10-21
 :page-revdate: {revdate}
 
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
 Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in EKS. This enables sources other than Rancher to own a hosted cluster's state.
 endif::[]
 ifeval::["{build-type}" == "mcm"]
