Apply suggestion from @pmkovar
Co-authored-by: Petr Kovar <pknbe@volny.cz>

--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -6,7 +6,7 @@ endif::[]
 :page-revdate: {revdate}
 
 ifeval::["{build-type}" != "srfa"]
-Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in EKS. This enables sources other than Rancher to own a hosted cluster's state.
+Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in AKS, EKS or GKE. This enables sources other than Rancher to own a hosted cluster's state.
 endif::[]
 ifeval::["{build-type}" == "mcm"]
 Syncing allows Rancher to update cluster values so that they're up to date with the corresponding cluster object hosted in EKS. This enables sources other than Rancher to own a hosted cluster's state.
